tests/NormalTests/paczka1/small_fuzzy/45899082.err
Error in line 1: 5XUMc8k A48 69,9
Error in line 14: Btsu S660 63,1
